--- a/SarajevoT/SarajevoT/App.xaml
+++ b/SarajevoT/SarajevoT/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="SarajevoTravel.App"
+    x:Class="SarajevoT.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SarajevoTravel"
+    xmlns:local="using:SarajevoT"
     RequestedTheme="Light">
 
 </Application>
