--- a/SarajevoTravel1.0/SarajevoTravel1.0/App.xaml
+++ b/SarajevoTravel1.0/SarajevoTravel1.0/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="SarajevoTravel.App"
+    x:Class="SarajevoTravel1._0.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SarajevoTravel"
+    xmlns:local="using:SarajevoTravel1._0"
     RequestedTheme="Light">
 
 </Application>
