--- a/SarajevoTravel1.0/SarajevoTravel1.0/AdminPanel.xaml
+++ b/SarajevoTravel1.0/SarajevoTravel1.0/AdminPanel.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="SarajevoTravel1._0.View.BlankPage1"
+    x:Class="SarajevoTravel1._0.AdminPanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SarajevoTravel1._0.View"
+    xmlns:local="using:SarajevoTravel1._0"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
